--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   country_icons: ^2.0.2
+  http: ^0.13.5
+  flutter_model_form_validation: ^1.0.2
 
 dev_dependencies:
   flutter_test:
