fix codestyle and file names + add custom http_service with bearer authentification + add saving bearer token via flutter_secure_storage + add sending post requests register, login and get profile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   country_icons: ^2.0.2
   http: ^0.13.5
   flutter_model_form_validation: ^1.0.2
+  flutter_secure_storage: ^7.0.1
+  decimal: ^2.3.2
 
 dev_dependencies:
   flutter_test:
