--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_model_form_validation: ^1.0.2
   flutter_secure_storage: ^7.0.1
   decimal: ^2.3.2
+  dropdown_button2: ^1.9.2
+  data_table_2: ^2.3.11
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
