--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   signalr_client: ^0.1.6
   pull_to_refresh: ^2.0.0
   getwidget: ^3.0.1
+  division: ^0.9.0
 
 dev_dependencies:
   flutter_test:
