--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   getwidget: ^3.0.1
   division: ^0.9.0
+  niku: ^2.3.3
 
 dev_dependencies:
   flutter_test:
